// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleLinkList add should correctly 1`] = `
DoubleLinkList {
  "head": Node {
    "data": "a",
    "next": Node {
      "data": "b",
      "next": Node {
        "data": "c",
        "prev": [Circular],
      },
      "prev": [Circular],
    },
  },
  "last": Node {
    "data": "c",
    "prev": Node {
      "data": "b",
      "next": [Circular],
      "prev": Node {
        "data": "a",
        "next": [Circular],
      },
    },
  },
  "len": 3,
}
`;

exports[`SingleLinkList remove should correctly 1`] = `
DoubleLinkList {
  "head": Node {
    "data": "a",
    "next": Node {
      "data": "c",
      "next": Node {
        "data": "d",
        "prev": [Circular],
      },
      "prev": [Circular],
    },
  },
  "last": Node {
    "data": "d",
    "prev": Node {
      "data": "c",
      "next": [Circular],
      "prev": Node {
        "data": "a",
        "next": [Circular],
      },
    },
  },
  "len": 3,
}
`;

exports[`SingleLinkList remove should correctly 2`] = `
DoubleLinkList {
  "head": Node {
    "data": "a",
    "next": Node {
      "data": "c",
      "next": undefined,
      "prev": [Circular],
    },
  },
  "last": Node {
    "data": "c",
    "next": undefined,
    "prev": Node {
      "data": "a",
      "next": [Circular],
    },
  },
  "len": 2,
}
`;

exports[`SingleLinkList remove should correctly 3`] = `
DoubleLinkList {
  "head": Node {
    "data": "c",
    "next": undefined,
    "prev": undefined,
  },
  "last": Node {
    "data": "c",
    "next": undefined,
    "prev": undefined,
  },
  "len": 1,
}
`;

exports[`SingleLinkList 头插入 应该正确 1`] = `
DoubleLinkList {
  "head": Node {
    "data": "0a",
    "next": Node {
      "data": "a",
      "next": Node {
        "data": "b",
        "next": Node {
          "data": "c",
          "prev": [Circular],
        },
        "prev": [Circular],
      },
      "prev": [Circular],
    },
  },
  "last": Node {
    "data": "c",
    "prev": Node {
      "data": "b",
      "next": [Circular],
      "prev": Node {
        "data": "a",
        "next": [Circular],
        "prev": Node {
          "data": "0a",
          "next": [Circular],
        },
      },
    },
  },
  "len": 4,
}
`;

exports[`SingleLinkList 指定index插入 1`] = `
DoubleLinkList {
  "head": Node {
    "data": "a",
    "next": Node {
      "data": "1a",
      "next": Node {
        "data": "b",
        "next": Node {
          "data": "c",
          "prev": [Circular],
        },
        "prev": [Circular],
      },
      "prev": [Circular],
    },
  },
  "last": Node {
    "data": "c",
    "prev": Node {
      "data": "b",
      "next": [Circular],
      "prev": Node {
        "data": "1a",
        "next": [Circular],
        "prev": Node {
          "data": "a",
          "next": [Circular],
        },
      },
    },
  },
  "len": 4,
}
`;

exports[`SingleLinkList 指定index插入 2`] = `
DoubleLinkList {
  "head": Node {
    "data": "a",
    "next": Node {
      "data": "1a",
      "next": Node {
        "data": "0b",
        "next": Node {
          "data": "b",
          "next": Node {
            "data": "c",
            "prev": [Circular],
          },
          "prev": [Circular],
        },
        "prev": [Circular],
      },
      "prev": [Circular],
    },
  },
  "last": Node {
    "data": "c",
    "prev": Node {
      "data": "b",
      "next": [Circular],
      "prev": Node {
        "data": "0b",
        "next": [Circular],
        "prev": Node {
          "data": "1a",
          "next": [Circular],
          "prev": Node {
            "data": "a",
            "next": [Circular],
          },
        },
      },
    },
  },
  "len": 5,
}
`;
